--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "atom-node": "^1.6.0",
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "date-fns": "^3.1.0",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
